More updates to fix overflow.

--- a/W02/styles/temples.css
+++ b/W02/styles/temples.css
@@ -67,6 +67,7 @@ nav{
     left: 0;
     height: 100%;
     width: 60vw;
+    max-width: 100vw;
     background-color: #4b0082;
     flex-direction: column;
     align-items: flex-start;
@@ -74,7 +75,8 @@ nav{
     z-index: 1000;
     box-shadow: 2px 0 10px rgba(0, 0, 0, 0.2);
     overflow-x: hidden;
-  }
+    overflow-y: auto;
+}
 .navigation li{
     margin:0.5rem 0;
 }
@@ -83,8 +85,9 @@ nav{
     font-weight: bold;
     text-decoration: none;
     font-size: 1.1rem;
-    width: 100%;
-    padding: 0.5rem 0;
+    width: calc(100%-1rem);
+    padding: 0.5rem;
+    box-sizing: border-box;
 }
 .navigation a:hover {
     background-color: #36006c;
